--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,11 @@ footer {
 }
 
 .footer-container {
-  max-width: 800px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
