--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,25 @@ header{
   padding: 1rem 2rem;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
 
-}/* CABEÇALHO */
+}
+h2{
+  font-size: 3rem;
+  margin: 20px;
+  color: black;
+}
+
+h1 {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 3rem;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FFD700;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.6);
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* CABEÇALHO */
 .cabecalho {
   color: #fff;
   display: flex;
@@ -71,12 +89,6 @@ main {
   margin-bottom: 40px;
 }
 
-main h1 {
-  text-align: center;
-  margin-bottom: 30px;
-  color: #222;
-  font-size: 28px;
-}
 
 form {
   display: flex;
@@ -99,17 +111,27 @@ form select:focus {
   border-color: #007bff;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
 }
+video {
+  width: 100%;
+  height: auto;
+  border-radius: 0 16px 0 16px;
+  margin-bottom: 20px;
+}
 .video-banner {
   position: relative;
   height: 60vh;
   overflow: hidden;
 }
 
-.video-bg {
+.video-corte {
   width: 100%;
   height: 100%;
   object-fit: cover;
   filter: brightness(0.6);
+  background-color: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  padding: 20px;
+  border-radius: 4px ;
+  color: #fff;
 }
 
 .overlay {
@@ -122,13 +144,25 @@ form select:focus {
 }
 
 .mapa {
-  padding: 2rem;
-  color: #fff;
+  background-color: #f5f5f5;
+  padding: 40px 20px;
   text-align: center;
 }
+
+.mapa h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+  color: #111;
+}
+
+.mapa p {
+  margin-bottom: 20px;
+  font-size: 1rem;
+  color: #555;
+}
+
 .profissionais {
   color: #2a2a2a;
-  padding: 23px;
   text-align: center;
 }
 
@@ -137,14 +171,15 @@ form select:focus {
   justify-content: center;
   gap: 2rem;
   margin-top: 2rem;
+  margin-bottom: 20px;
 }
 
 .card {
-  padding: 1.5rem;
   border-radius: 12px;
-  width: 350px;
+  max-width: 350px;
   box-shadow: 0 0 10px rgba(0,0,0,0.4);
   transition: transform 0.3s ease;
+  margin-bottom: 20px;
 }
 
 .card img {
@@ -358,8 +393,14 @@ form button:hover {
   font-size: 14px;
   color: #aaa;
 }
+
 /* RESPONSIVIDADE */
 @media (max-width: 768px) {
+
+  h1, h2{
+    margin-top: 20px;
+    font-size: 1.5rem;
+  }
   .menu {
     display: none;
     flex-direction: column;
@@ -384,15 +425,14 @@ form button:hover {
   main {
     margin: 20px;
   }
-  .profissionais{
-    max-width: 400px;
-    margin: 0 auto;
-  }
 
   .cards {
     flex-direction: column;
     align-items: center;
-    width: 400px;
+  }
+  .card {
+    max-width: 300px;
+    margin-bottom: 20px;
   }
 
   footer {
