--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ h1 {
 
 /* CABEÇALHO */
 .cabecalho {
-  color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -142,7 +141,9 @@ video {
   color: #fff;
   text-align: center;
 }
-
+.video-overlay p{
+  text-align: center;
+}
 .mapa {
   background-color: #f5f5f5;
   padding: 40px 20px;
@@ -190,6 +191,9 @@ video {
 
 .card:hover {
   transform: scale(1.05);
+}
+.card p{
+  margin: 10px;
 }
 .destaque{
   margin-top: 20PX;
@@ -569,4 +573,7 @@ form button:hover {
     padding: 12px !important;
     font-size: 16px !important;
   }
+  .card p{
+  margin: 10px;
+}
 }
